--- a/views/pages/info-post.ejs
+++ b/views/pages/info-post.ejs
@@ -10,7 +10,7 @@
     <meta property="og:url"                content="https://tothanhdat.online/blog/<%=infoBlog._id%> " />
     <meta property="og:type"               content="article" />
     <meta property="og:title"              content="<%=infoBlog.title %>" />
-    <meta property="og:description"        content="Chúc bạn có trải nghiệm vui vẻ!" />
+    <meta property="og:description"        content="<%=infoBlog.shortDesc || 'Xin chào các bạn, mình là Đạt. Hiện tại mình là 1 ITBA, mình thích chụp ảnh, đá bóng và các công việc liên quan đến lĩnh vực IT' %>" />
     <meta property="og:image"              content="<%=infoBlog.image %>" />
     
     <meta name="viewport" content="width=device-width, initial-scale=1">
