change path image

--- a/views/dashboard/update-post.ejs
+++ b/views/dashboard/update-post.ejs
@@ -57,11 +57,10 @@
                                                             </form>
                                                         </div>
                                                     </div>
-                                                    <div class="mb-3">
+                                                    <!-- <div class="mb-3">
                                                         <label for="example-url-input" class="form-label">URL Hình ảnh (Optional)</label>
                                                         <input class="form-control" type="url" value="<%=infoBlog.image%>" id="image">
-                                                    </div>
-                                                    
+                                                    </div> -->
                                                 </div>
                                             </div>
 
