--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -42,7 +42,7 @@
                                 <article class="hentry post has-post-thumbnail slideUp" style="position: absolute; left: 0px; top: 0px; width: 49.8947%; box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;">
                                     <!-- .featured-image -->
                                     <div class="featured-image">
-                                        <a href="/blog/<%=blog._id %>"><img style="flex-shrink: 0; min-width: 100%; max-height: 240px; object-fit: cover;" width="1440" height="1440" src="/template/images/<%=blog.image%>" alt="blog-image"></a>
+                                        <a href="/blog/<%=blog._id %>"><img style="flex-shrink: 0; min-width: 100%; max-height: 240px; object-fit: cover;" width="1440" height="1440" src="<%=blog.image%>" alt="blog-image"></a>
                                     </div>
                                     
                                     <header class="entry-header">
