--- a/views/pages/footer.ejs
+++ b/views/pages/footer.ejs
@@ -194,6 +194,7 @@
     <script src="/template/js/main.js"></script>
     <script src="/template/js/shortcodes/shortcodes.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.3/moment.min.js" integrity="sha512-x/vqovXY/Q4b+rNjgiheBsA/vbWA3IVvsS8lkQSX1gQ4ggSJx38oI2vREZXpTzhAv6tNUaX81E7QBBzkpDQayA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 
 </body>
 <!-- InstanceEnd --></html>
