--- a/views/pages/info-post.ejs
+++ b/views/pages/info-post.ejs
@@ -41,6 +41,7 @@
     <link rel="stylesheet" type="text/css" href="/template/js/shortcodes/shortcodes.css">
     <link rel="stylesheet" type="text/css" href="/template/css/768.css">
     <link rel="stylesheet" type="text/css" href="/template/css/992.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css" integrity="sha512-3pIirOrwegjM6erE5gPSwkUzO+3cTjpnV9lexlNZqvupR64iZBnOOTiiLPb9M36zpMScbmUNIcHUqKD47M719g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
 	<!-- INITIAL SCRIPTS -->
 	<script src="/template/js/modernizr.min.js"></script>
@@ -207,7 +208,7 @@
                              <!-- .share-links -->
                              <div class="share-links">
                                 
-                                <h3>SHARE THIS POST</h3>
+                                <h3>CHIA SẺ LÊN</h3>
                                                                 
                                 <a rel="nofollow" target="_blank" href="mailto:?subject=I wanted you to see this post&amp;body=Check out this post : Sketching Mickey - http://themes.pixelwars.org/editor-html/blog-single.html." title="Email this post to a friend"><i class="pw-icon-mail"></i></a>
                                 
@@ -219,6 +220,68 @@
                                 
                              </div>
                              <!-- .share-links -->
+
+                             <nav class="nav-single row">
+                                <% if (previousPost) { %>
+                                    <div class="nav-previous col-xs-6">
+                                        <h4>Xem bài trước</h4>
+                                        <a href="/blog/<%=nextPost._id%>" rel="prev"><%=previousPost.title %></a>
+                                    </div>
+                                <% } %>
+                                
+                                <% if (nextPost) { %>
+                                    <div class="nav-next col-xs-6">
+                                        <h4>Xem bài tiếp theo</h4>
+                                        <a href="/blog/<%=nextPost._id%>" rel="next"><%=nextPost.title %> </a>
+                                    </div>
+                                <% } %>
+                            </nav>
+
+                            <div id="comments" class="comments-area">
+                              
+                                <!-- #respond --> 
+                                <div id="respond">
+                                
+                                  <h3 id="reply-title">Để lại trả lời  <small><a rel="nofollow" id="cancel-comment-reply-link" href="#" style="display:none;">Cancel reply</a></small></h3>
+                                  
+                                  <!-- .commentform -->
+                                  <form action="#" method="post" id="commentform" class="validate-form" novalidate="novalidate">
+                                  
+                                    <p class="comment-notes">Your email address will not be published. Required fields are marked <span class="required" aria-required="true">*</span></p>
+                                    
+                                    <p class="comment-form-comment">
+                                      <label for="comment">Comment</label>
+                                      <textarea id="comment" name="comment" rows="8" aria-required="true" class="required"></textarea>
+                                    </p>
+                                    
+                                    <p class="comment-form-author">
+                                      <label for="author">Name <span class="required" aria-required="true">*</span></label>
+                                      <input id="author" name="author" type="text" size="30" aria-required="true" class="required">
+                                    </p>
+                                    
+                                    <p class="comment-form-email">
+                                      <label for="email">Email <span class="required" aria-required="true">*</span></label>
+                                      <input id="email" name="email" type="text" size="30" aria-required="true" class="required email">
+                                    </p>
+                                    
+                                    <p class="comment-form-url">
+                                      <label for="url">Website</label>
+                                      <input id="url" name="url" type="text" size="30">
+                                    </p>
+                                    
+                                    <p class="form-allowed-tags">You may use these <abbr title="HyperText Markup Language">HTML</abbr> tags and attributes: <code>&lt;a href="" title=""&gt; &lt;abbr title=""&gt; &lt;acronym title=""&gt; &lt;b&gt; &lt;blockquote cite=""&gt; &lt;cite&gt; &lt;code&gt; &lt;del datetime=""&gt; &lt;em&gt; &lt;i&gt; &lt;q cite=""&gt; &lt;strike&gt; &lt;strong&gt; </code></p>
+                                    
+                                    <p class="form-submit">
+                                      <input type="submit" name="submit" id="submit" class="button primary btnComment" value="SUBMIT">
+                                    </p>
+                                    
+                                  </form>
+                                  <!-- .commentform -->
+                                  
+                                </div>
+                                <!-- #respond --> 
+                                
+                              </div>
                     </article>
             </div>
             <!-- site-content -->
@@ -241,13 +304,17 @@
             success: resp => {
                 let infoBlog = resp.data;
                 if(!resp.error){
-                    //$("head").append(`<meta property="og:url"content="https://tothanhdat.online/blog/${blogID}"/><meta property="og:type"content="article" /><meta property="og:title"content="${}" /><meta property="og:description"content="Chúc bạn có trải nghiệm vui vẻ 😊" /><meta property="og:image"content="https://tothanhdat.online/template/images/site/avatar_main_square.jpg"/>`);
                     $('.content-ckeditor').append(infoBlog.content)
                 }else{
                     return toastr['error']('Thêm thất bại', 'Thông báo');
                 }
             },
             error: err => console.log({ err })
+        });
+
+        $(document).on('click', '.btnComment', function(e) {
+            e.preventDefault();
+            return toastr['warning']('Tính năng này đang được phát triển', 'Thông báo');
         });
     })
     
