update about me

--- a/views/dashboard/header.ejs
+++ b/views/dashboard/header.ejs
@@ -47,7 +47,7 @@
                                     <img src="/layouts/assets/images/logo-sm.svg" alt height="24">
                                 </span>
                                 <span class="logo-lg">
-                                    <img src="/layouts/assets/images/logo-sm.svg" alt height="24"> <span class="logo-txt">Blog TTĐ</span>
+                                    <img src="/layouts/assets/images/logo-sm.svg" alt height="24"> <span class="logo-txt">tothanhdat</span>
                                 </span>
                             </a>
 
@@ -56,7 +56,7 @@
                                     <img src="/layouts/assets/images/logo-sm.svg" alt height="24">
                                 </span>
                                 <span class="logo-lg">
-                                    <img src="/layouts/assets/images/logo-sm.svg" alt height="24"> <span class="logo-txt">Blog TTĐ</span>
+                                    <img src="/layouts/assets/images/logo-sm.svg" alt height="24"> <span class="logo-txt">tothanhdat</span>
                                 </span>
                             </a>
                         </div>
