--- a/views/pages/header.ejs
+++ b/views/pages/header.ejs
@@ -77,7 +77,7 @@
                                 <!-- level 2 -->
                             </li>
                             
-                            <li><a href="/about-me">ABOUT ME</a></li>
+                            <li><a href="/blog/62b9d312bef55b7a0c83084e">ABOUT ME</a></li>
 
                             <% CATEGORY.forEach(category => { %>
                                 <li><a href="/category/type/<%=category.id%>"><%=category.title %> </a></li>
