--- a/views/dashboard/add-post.ejs
+++ b/views/dashboard/add-post.ejs
@@ -39,7 +39,8 @@
                                                     <div class="mb-3">
                                                         <label for="example-email-input" class="form-label">Hình ảnh</label>
                                                         <input class="form-control" type="file" value="" id="image-post">
-
+                                                        <br>
+                                                        <img src="" id="img" height="200px" alt="">
                                                         <!-- <div>
                                                             <form action="#" class="dropzone">
                                                                 <div class="fallback">
@@ -176,6 +177,24 @@
             });
             //return console.log({ title, shortDesc, category, content, _imagePost });
         })
+
+        $('#image-post').change(function(){
+            var input = this;
+            var url = $(this).val();
+            var ext = url.substring(url.lastIndexOf('.') + 1).toLowerCase();
+            if (input.files && input.files[0]&& (ext == "gif" || ext == "png" || ext == "jpeg" || ext == "jpg")) 
+            {
+                var reader = new FileReader();
+
+                reader.onload = function (e) {
+                $('#img').attr('src', e.target.result);
+                }
+            reader.readAsDataURL(input.files[0]);
+            }
+            else{
+                $('#img').attr('src', '/assets/no_preview.png');
+            }
+        });
     })
     
 </script>
